--- a/templates/index.html
+++ b/templates/index.html
@@ -65,22 +65,23 @@
 
 <h2>Upload CSV File</h2>
 
-<!-- File Upload Form -->
+<!-- File Upload and Cutoff Calculation Form -->
 <form id="uploadForm" enctype="multipart/form-data">
     <input type="file" name="file" accept=".csv" required><br>
 
-    <label for="costFP">Cost of False Positives:</label>
-    <input type="number" id="costFP" name="costFP" step="any" required><br>
+    <label for="cost_fp">Cost of False Positives:</label>
+    <input type="number" id="cost_fp" name="cost_fp" step="any" required><br>
 
-    <label for="costFN">Cost of False Negatives:</label>
-    <input type="number" id="costFN" name="costFN" step="any" required><br>
+    <label for="cost_fn">Cost of False Negatives:</label>
+    <input type="number" id="cost_fn" name="cost_fn" step="any" required><br>
 
-    <label for="benefitTP">Benefit of True Positives:</label>
-    <input type="number" id="benefitTP" name="benefitTP" step="any" required><br>
+    <label for="cost_tp">Benefit of True Positives:</label>
+    <input type="number" id="cost_tp" name="cost_tp" step="any" required><br>
 
-    <label for="benefitTN">Benefit of True Negatives:</label>
-    <input type="number" id="benefitTN" name="benefitTN" step="any" required><br>
+    <label for="cost_tn">Benefit of True Negatives:</label>
+    <input type="number" id="cost_tn" name="cost_tn" step="any" required><br>
 
+    <input type="number" name="cost" placeholder="Target Cost" required><br>
     <input type="submit" value="Upload">
 </form>
 
@@ -94,7 +95,7 @@
         // Form Data
         var formData = new FormData(this);
 
-        // AJAX Request
+        // First AJAX Request to '/predict'
         fetch('/predict', {
             method: 'POST',
             body: formData
@@ -102,9 +103,18 @@
         .then(response => response.json())
         .then(data => {
             document.getElementById('response').innerHTML = JSON.stringify(data, null, 2);
+            // After receiving a response from '/predict', make a second request to '/cut_off'
+            return fetch('/cut_off', {
+                method: 'POST',
+                body: formData
+            });
+        })
+        .then(response => response.json())
+        .then(data => {
+            document.getElementById('response').innerHTML += '<br>Cutoff Calculations: ' + JSON.stringify(data);
         })
         .catch(error => {
-            document.getElementById('response').innerHTML = 'Error: ' + error;
+            document.getElementById('response').innerHTML += '<br>Error: ' + error;
         });
     };
 </script>
