--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
             // Check if the response contains a file URL
             if (data.file_url) {
                 // Add a button to the response div that links to the file URL
-                document.getElementById('response').innerHTML = `<p>${JSON.stringify(data, null, 2)}</p><a href="${data.file_url}" target="_blank"><button>Download Predictions</button></a>`;
+                document.getElementById('response').innerHTML = `<a href="${data.file_url}" target="_blank"><button>Download Predictions</button></a>`;
             } else {
                 document.getElementById('response').innerHTML = JSON.stringify(data, null, 2);
             }
