added html for cutoff

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,16 +70,16 @@
     <input type="file" name="file" accept=".csv" required><br>
 
     <label for="costFP">Cost of False Positives:</label>
-    <input type="number" id="costFP" name="costFP" step="any" required><br>
+    <input type="number" id="costFP" name="cost_fp" step="any" required><br>
 
     <label for="costFN">Cost of False Negatives:</label>
-    <input type="number" id="costFN" name="costFN" step="any" required><br>
+    <input type="number" id="costFN" name="cost_fn" step="any" required><br>
 
     <label for="benefitTP">Benefit of True Positives:</label>
-    <input type="number" id="benefitTP" name="benefitTP" step="any" required><br>
+    <input type="number" id="benefitTP" name="cost_tp" step="any" required><br>
 
     <label for="benefitTN">Benefit of True Negatives:</label>
-    <input type="number" id="benefitTN" name="benefitTN" step="any" required><br>
+    <input type="number" id="benefitTN" name="cost_tn" step="any" required><br>
 
     <input type="submit" value="Upload">
 </form>
@@ -102,6 +102,35 @@
         .then(response => response.json())
         .then(data => {
             document.getElementById('response').innerHTML = JSON.stringify(data, null, 2);
+        })
+        .catch(error => {
+            document.getElementById('response').innerHTML = 'Error: ' + error;
+        });
+    };
+</script>
+
+
+
+<div id="response"></div>
+
+<script>
+    document.getElementById('cutOffForm').onsubmit = function(event) {
+        event.preventDefault();
+
+        // Form Data
+        var formData = new FormData(this);
+
+        // AJAX Request
+        fetch('/cut_off', {
+            method: 'POST',
+            body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+            var result = 'False Positive Rate: ' + data.fpr + '<br>' +
+                         'True Positive Rate: ' + data.tpr + '<br>' +
+                         'Cut-off Point: ' + data.cut_off;
+            document.getElementById('response').innerHTML = result;
         })
         .catch(error => {
             document.getElementById('response').innerHTML = 'Error: ' + error;
